Smil text alignment fix

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ to this section's matching END comment to see page-specific styles.
 }
 
 img {
-    max-width: 110%;
+    max-width: 100%;
     height: auto;
 }
 
@@ -684,7 +684,7 @@ h7 {
 
 .intro_visual {
     position: relative;
-    /* max-width: 70%; */
+    max-width: 80%;
     min-width: 300px;
     height: auto;
     width: auto;
@@ -712,6 +712,7 @@ h7 {
 .proposal_box {
     position: relative;
     width: 100%;
+    max-width: 100%;
     /* height: 900px; */
     /* border: 0.5px solid var(--Main, #1A3E2F); */
     text-align: center;
@@ -751,8 +752,8 @@ h7 {
 .proposal_text {
     width: 60%;
     position: relative;
-    top: 80px;
-    margin-left: 100px;
+    padding-top: 80px;
+    padding-left: 80px;
 }
 
 .project_process_title {
@@ -821,6 +822,25 @@ h7 {
 }
 
 @media only screen and (max-width: 900px) {
+
+    .gradient_circle_pointer {
+        /* width: 50px;
+        /* Adjust size as needed */
+        height: 50px;
+        /* Adjust size as needed */
+        border-radius: 50%;
+        top: 0px;
+        position: fixed;
+        pointer-events: none;
+        /* Ensures the circle doesn't interfere with mouse events */
+        background: radial-gradient(50% 50% at 50% 50%,
+                #c5aaec 0%,
+                rgba(197, 170, 236, 0) 0%);
+        transition: transform 0.1s linear;
+        /* Smooth transition for better visual effect */
+        z-index: -10;
+        */
+    }
 
     /* 
     .left-links,
@@ -977,6 +997,11 @@ h7 {
             align-content: left; */
     }
 
+    .proposal_text {
+        padding: 10px 10px;
+    }
+
+
     .detail_box {
         width: 100%;
     }
@@ -997,7 +1022,7 @@ h7 {
     }
 
     .intro_visual {
-        width: 90%;
+        width: 70%;
     }
 
     .hover_image {
@@ -1050,10 +1075,11 @@ h7 {
     .proposal_box {
         margin: 0;
         padding-left: 0px;
+        gap: 30px;
     }
 
     .proposal_text_box {
-        padding: 20px;
+        padding: 0px 10px;
     }
 
     .proposal_section {
@@ -1087,10 +1113,6 @@ h7 {
         /* Decrease font size for smaller screens */
     /* } */
 
-    .proposal_text {
-        top: 0px;
-    }
-
     .project_process_text,
     .project_proposal_text {
         font-size: 16px;
@@ -1101,10 +1123,6 @@ h7 {
     .proposal_video {
         margin-top: 20px;
         margin-bottom: 50px;
-    }
-
-    .proposal_box {
-        gap: 30px;
     }
 
     .render_image {
@@ -1118,6 +1136,9 @@ h7 {
         width: 100%;
         margin-left: 0px;
         left: -40px;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
     }
 
     .footer_text {
